<resources>
    <string name="app_name">New York</string>
    <string name="btn_registr">Регистрация</string>
    <string name="btn_login">Вход</string>
    <string name="btnSigIn">Войти</string>
    <string name="btnSignUp">Зарегистрироваться</string>
    <string name="alreadySignUp">Уже есть аккаунт</string>
    <string name="hintNumber">Номер телефона</string>
    <string name="hintPass">Пароль</string>
    <string name="hintName">Имя</string>
    <string name="remember_me">запомнить меня</string>
    <string name="so">Оформление заказа</string>
    <string name="so_phone">Телефон</string>
    <string name="so_name">Имя</string>
    <string name="so_address">Адрес</string>
    <string name="so_payment_option">Способ оплаты</string>
    <string name="so_nal">Наличные</string>
    <string name="so_beznal">Безналичные</string>
    <string name="so_com">Комментарий</string>
    <string name="so_btnSetOrder">Оформить заказ</string>
    <string name="required_field">Обязательное поле*</string>
    <string name="openNav">Open nav</string>
    <string name="closeNav">Close nav</string>
    <string name="nameMenu">Menu name</string>
    <string name="gram">гр</string>
    <string name="total">Итог: </string>
    <string name="placeOrder">К оформлению заказу</string>
    <string name="nav_menu">Меню</string>
    <string name="nav_cart">Корзина</string>
    <string name="nav_orders">Заказы</string>
    <string name="nav_logout">Выйти</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home2">Home2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>